; ModuleID = '/home/carl/AnghaBench/redis/src/extr_object.c_createSetObject.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_object.c_createSetObject.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@setDictType = common dso_local global i32 0, align 4
@OBJ_SET = common dso_local global i32 0, align 4
@OBJ_ENCODING_HT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_4__* @createSetObject() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = call i32* @dictCreate(i32* @setDictType, i32* null)
  store i32* %3, i32** %1, align 8
  %4 = load i32, i32* @OBJ_SET, align 4
  %5 = load i32*, i32** %1, align 8
  %6 = call %struct.TYPE_4__* @createObject(i32 %4, i32* %5)
  store %struct.TYPE_4__* %6, %struct.TYPE_4__** %2, align 8
  %7 = load i32, i32* @OBJ_ENCODING_HT, align 4
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  store i32 %7, i32* %9, align 4
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  ret %struct.TYPE_4__* %10
}

declare dso_local i32* @dictCreate(i32*, i32*) #1

declare dso_local %struct.TYPE_4__* @createObject(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
